--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     </div>
     <div class="copy-group">
         <span>⁰⁶├▢ Segurança ❍</span>
-        <button class="copy-button" onclick="copyText('ˢᵍᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ˢᵍʳⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁷├▢Vigia ❍</span>
@@ -401,27 +401,27 @@
     </div>
     <div class="copy-group">
         <span>⁰¹├◈ 𝘑𝘶𝘪𝘻 ▣</span>
-        <button class="copy-button" onclick="copyText('ʲᶻᵏʳᵛ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ʲᶻˢ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰²├◈𝘗𝘳𝘦𝘧𝘦𝘪𝘵𝘰 ▣</span>
-        <button class="copy-button" onclick="copyText('ᵖᶠˢᵏ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵖʳᶠᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰³├◈ 𝘈𝘥𝘷𝘰𝘨𝘢𝘥𝘰 ▣</span>
-        <button class="copy-button" onclick="copyText('ᵃᵈᵛˢᵏ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵈᵛᵍ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁴├◈𝘚𝘩𝘦𝘳𝘪𝘦𝘧𝘧 ▣</span>
-        <button class="copy-button" onclick="copyText('ˢʰᵉˢᵏ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ˢʰʳᶠ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁵├◈𝘊𝘰𝘰𝘥𝘦𝘳𝘯𝘢𝘥𝘰𝘳 ▣</span>
-        <button class="copy-button" onclick="copyText('ᶜᵈˢᵏ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶜʳᵈⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁶├◈𝘜𝘱𝘢𝘥𝘰𝘳 ▣</span>
-        <button class="copy-button" onclick="copyText('ᵘᵖᵈʳ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵘᵖˢᵏ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁸├◈𝘖𝘳𝘨𝘢𝘯𝘪𝘢𝘥𝘰𝘳 ▣</span>
@@ -446,23 +446,23 @@
     </div>
     <div class="copy-group">
         <span>¹⁴├◈ 𝘐𝘯𝘥𝘪𝘤𝘢𝘥𝘰𝘳 ▣</span>
-        <button class="copy-button" onclick="copyText('ⁱⁿ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶦⁿᵈᶜ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>¹⁵├◈ Adm Estadual ▣</span>
-        <button class="copy-button" onclick="copyText('ᵃᵈᵐᵉˢᵗ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶦⁿᵉˢᵗ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>¹⁶├◈ 𝘗𝘰𝘭𝘪𝘤𝘪𝘢𝘭 ▣</span>
-        <button class="copy-button" onclick="copyText('ᵖˡˢᵏ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵖˡᶜˡ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>¹⁷├◈ 𝘙𝘦𝘤𝘪𝘱𝘤𝘪𝘰𝘯𝘪𝘴𝘵𝘢 ▣</span>
-        <button class="copy-button" onclick="copyText('ʳᵉᶜⁱᵖ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ʳᶜᵠ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>¹⁸├◈ Adm Federal ▣</span>
-        <button class="copy-button" onclick="copyText('ˢᵏᵘʳⁿᵉᵉˣᵗ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶦⁿᶜᶠᵈ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>¹⁹├◈𝘈𝘯𝘢𝘭𝘪𝘴𝘵𝘢 ▣</span>
@@ -471,27 +471,27 @@
     
     <div class="copy-group">
         <span>²⁰├◈ 𝘈𝘥𝘮 𝘕𝘦𝘦𝘹𝘵 𝘖𝘧𝘪𝘤𝘪𝘢𝘭 ▣</span>
-        <button class="copy-button" onclick="copyText('ˢᵏᵘʳ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ˢᵏᵘʳᵒᶠᶜ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>²¹├◈ ADM Residente ▣</span>
-        <button class="copy-button" onclick="copyText('ᵃᵈᵐʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ʳᶜˢᵈ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>²²├◈ 𝘈𝘥𝘮 𝘐𝘯𝘵𝘦𝘳𝘪𝘯𝘰 ▣</span>
-        <button class="copy-button" onclick="copyText('ᵃᵈᵐⁱⁿᵗ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶦⁿᶜᵗⁿ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>²³├◈ 𝘈𝘥𝘮 𝘈𝘱𝘳𝘦𝘯𝘥𝘪𝘻 ▣</span>
-        <button class="copy-button" onclick="copyText('ᵃᵈᵐᵏᵃᵖʳᵉⁿ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶦⁿᵖᵈᶻ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>²⁴├◈ Iniciante ▣</span>
-        <button class="copy-button" onclick="copyText('ⁱⁿᶜⁱ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶦⁿᶜˢ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>²⁶├◈ 𝘈𝘭𝘶𝘯𝘰 ▣</span>
-<button class="copy-button" onclick="copyText('ᵃˡᵘⁿᵒˢᵏ')">Copiar</button>
+<button class="copy-button" onclick="copyText('ᵃˡⁿᵒ')">Copiar</button>
     </div>
         <div class="copy-group">
         <span>²⁵├◈ Teste ▣</span>
