--- a/index.html
+++ b/index.html
@@ -355,19 +355,19 @@
     </div>
     <div class="copy-group">
         <span>⁰²├▢Vereador ❍</span>
-        <button class="copy-button" onclick="copyText('ᵛʳᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵛʳᵈʳ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰³├▢Sindicato ❍</span>
-        <button class="copy-button" onclick="copyText('ˢᵈᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ˢᵈᵗᵒ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁴├▢Repositor ❍</span>
-        <button class="copy-button" onclick="copyText('ʳᵖᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ʳᵖˢᵗʳ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁵├▢Upador ❍</span>
-        <button class="copy-button" onclick="copyText('ᵘᵖᵈʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵘᵖᵈʳ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁶├▢ Segurança ❍</span>
@@ -375,11 +375,11 @@
     </div>
     <div class="copy-group">
         <span>⁰⁷├▢Vigia ❍</span>
-        <button class="copy-button" onclick="copyText('ᵛᵍᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵛᵍᶦ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁸├▢𝘈𝘨𝘦𝘯𝘵𝘦 ❍</span>
-        <button class="copy-button" onclick="copyText('ᶜᵒᵈⁱⁿᵒᵐᵉ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('⁰⁰¹')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>⁰⁹├▢𝘐𝘯𝘴𝘵𝘳𝘶𝘵𝘰𝘳 ❍</span>
@@ -387,11 +387,11 @@
     </div>
     <div class="copy-group">
         <span>¹⁰├▢Carrasco ❍</span>
-        <button class="copy-button" onclick="copyText('ᶜᵃᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᶜʳˢᶜ')">Copiar</button>
     </div>
     <div class="copy-group">
         <span>¹¹├▢Animador ❍</span>
-        <button class="copy-button" onclick="copyText('ᵃⁿⁱᵐᵘʳˢ')">Copiar</button>
+        <button class="copy-button" onclick="copyText('ᵃⁿᶦᵈʳ')">Copiar</button>
     </div>
 </div>
 <div class="house-section">
