--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <span>¹²├▩ 𝘔𝘪𝘯𝘪𝘴𝘵𝘳𝘰 𝘥𝘢 𝘋𝘦𝘧𝘦𝘴𝘢 ꗃ </span>
     <button class="copy-button" onclick="copyText('ᵐᵈᶠˢᵏ')">Copiar</button>
     <i class="fas fa-user" style="color: pink; margin-left: 5px;"></i> <!-- Ícone do boneco rosa -->
-    <span style="color: pink; margin-left: 5px;">mih</span> <!-- Texto "mih" rosa -->
+    <span style="color: pink; margin-left: 5px;">Vih❤️</span> <!-- Texto "mih" rosa -->
 </div>
 <div class="copy-group">
     <span>¹³├▩ Ministro da Justiça ꗃ </span>
